syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "TaskService";

service EmailService {
    rpc readAllHistorySendEmail (ListHistorySendEmailReq) returns (stream ListHistorySendEmailRes);
}

message HistorySendEmailM {
    int64 id = 1;
    string time = 2;
    string status = 3;
    string title = 4;
    string content = 5;
    SendEmailM sendEmailM = 6;
    ReceiveEmailM receiveEmail = 7;


}

message SendEmailM {
    int64 id = 1;
    string username = 2;
    string password = 3;
    string title = 4;
    string content = 5;
}

message ReceiveEmailM {
    int64 id = 1;
    string email = 2;
    SendEmailM sendEmailM = 3;
}

message ListHistorySendEmailRes {
    repeated HistorySendEmailM historySendEmailM = 1;
}

message ListHistorySendEmailReq {
}
